--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,5 +2,5 @@
     <h1>{{ pagetitle }}</h1>
     <p><a href="/">Home</a></p>
     <p><a href="/about">About</a></p>
-    <p><a href="/contact">About</a></p>
+    <p><a href="/contact">Contact</a></p>
 </header>
